# mupexi2

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  MuPeXI.py  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli_parameters.md  output_schema.md  vcf_input_examples.md
docs/vcf_examples/: dna_only_mutect2_example.vcf  merged_phased_rna_dna_example.vcf
examples/: output_example.mupexi  your_server.ini
scripts/: filter_vep_best_transcript.py  filter_vep_rna_edit_strandness.py  run_cprome_example.sh  run_hpc_example.sh  run_supertest_hpc_template.sh
scripts/local/: run_supertest_local.sh
src/mupexi2/: __init__.py  cli.py  config.ini  core.py  io_utils.py  models.py  vcf.py  vep_disambiguation.py  vep_strandness_control.py
tests/: test_basic.py  test_vep_disambiguation.py  test_vep_strandness_control.py
