[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mupexi2"
version = "0.1.0"
description = "MuPeXI2 - Mutant Peptide Extractor and Informer (research tool)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "MuPeXI2 contributors"}
]
dependencies = [
  "biopython>=1.80",
  "psutil>=5.9",
  "six>=1.16",
  "numpy>=1.21",
  "pandas>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4.0"
]

[project.scripts]
mupexi2 = "mupexi2.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
mupexi2 = ["config.ini"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
